# cfoprover

./: .gitignore  cfoprover.cabal  cprover.cabal
src/: Formula.hs  Logic.hs  Main.hs  Search.hs  TPTP.hs
src/lib/: Search.hs  Types.hs
src/lib/Prover/: Parser.hs  Proofs.hs  Search.hs  Types.hs
test/: Main.hs
tests/: complete.in  exponential.in  simple.in  simple.out
